<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_10"
    android:background="@drawable/bg_white_corner_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/label_confirm_exit"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSize_16" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            style="@style/Button.Green"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/buttonHeight_40"
            android:layout_marginStart="@dimen/margin_28"
            android:background="@drawable/bg_selector_button_blue"
            android:text="@string/btn_yes"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/buttonHeight_40"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_28"
            android:background="@drawable/bg_selector_button_blue"
            android:text="@string/btn_no"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_14" />
    </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>