<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="water.viewmodel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <TextView
            android:id="@+id/tv_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_120"
            android:text="@string/login_now"
            android:textColor="@color/blue"
            android:textSize="@dimen/fontSize_30"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_enjoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8"
            android:text="@string/login_enjoy"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/fontSize_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_now" />

        <LinearLayout
            android:id="@+id/lin_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_130"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_enjoy">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginStart="-10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/padding_16"
                    android:text="+91"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/fontSize_16" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:backgroundTint="@color/light_grey"
                    android:hint="@string/hint_mobile"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="@dimen/padding_8"
                    android:textColor="@color/text_gray"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/fontSize_14" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_gray" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_started"
            style="@style/Button.Green"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/buttonHeight_40"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/padding_60"
            android:layout_marginBottom="@dimen/padding_4"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:onClick="@{()->viewmodel.onNextScreen()}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/fontSize_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lin_mobile" />

        <LinearLayout
            android:id="@+id/lin_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_24"
            android:orientation="horizontal"
            android:padding="@dimen/padding_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_started">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_4"
                android:text="@string/dont_account"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/fontSize_12" />

            <TextView
                android:layout_marginStart="-3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewmodel.onSignUpScreen()}"
                android:padding="@dimen/padding_4"
                android:text="@string/sign_up"

                android:textColor="@color/blue"
                android:textSize="@dimen/fontSize_12" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>