<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cartmodel"
            type="water.model.CartModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_12"
        android:background="#F7F7F7"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_prod_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_16"
                android:paddingTop="@dimen/dp_6"
                android:paddingBottom="@dimen/dp_6"
                android:text="@string/chakana_blue"
                android:textSize="@dimen/fontSize_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_prod_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_12"
                android:paddingTop="@dimen/dp_6"
                android:paddingBottom="@dimen/dp_6"
                android:text="RS 1375.50"
                android:textSize="@dimen/fontSize_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_prod_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_6"
                android:text="@string/delivered"
                android:textSize="@dimen/fontSize_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_prod_price" />

            <TextView
                android:id="@+id/tv_prod_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_6"
                android:text="@string/cross_republic"
                android:textColor="@color/skilled_desc_color"
                android:textSize="@dimen/fontSize_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_prod_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart_total_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_prod_address"
                tools:itemCount="4"
                tools:listitem="@layout/product_text_list" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_12"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/rv_cart_total_list">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_6"
                    android:layout_marginRight="@dimen/dp_12"
                    android:background="@color/black"
                    android:clickable="false"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/dp_130"
                    android:layout_height="@dimen/dp_35"
                    android:layout_marginTop="@dimen/dp_12"
                    android:layout_marginBottom="@dimen/dp_12"
                    android:background="@drawable/bg_btn_blue_stroke"
                    android:text="@string/reorder"
                    android:textColor="@color/blue" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>